test/expected/explain_lc32.out
explain long char32_t x
             ^
14: error: "long char32_t" is illegal for built-in type
